@@ -21,6 +21,7 @@
             <label for="password"><%= l('Password') %></label>
         </div>
     </div>
+    %= csrf_field
     <div class="col s8 m8 offset-s2 offset-m2">
         <button class="btn waves-effect waves-light" type="submit" name="action">
             <%= l('Signin') %>
