@@ -17,6 +17,7 @@ Revision history for Lufi
 	- Add a test suite
 	- MySQL support
 	- Display max size on upload page
+	- Add CSRF token challenge on login
 
 0.02.2 2017-09-18
 	- Fix cron tasks bug
